Fixed typo in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="pads">
             <div class="pad1">
-                <audio class="sound" src="./sounds/bubbles.mps"></audio>
+                <audio class="sound" src="./sounds/bubbles.mp3"></audio>
             </div>
             <div class="pad2">
                 <audio class="sound" src="./sounds/clay.mp3"></audio>
