--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="app">
         <header>
-            <h1>Tap Music</h1>
+            <h1>Beats</h1>
             <p>Make music with only one tap</p>
         </header>
         <div class="visual">
