--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Tap Music</title>
     <script type="text/javascript" src="paper-full.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/1.1.28/howler.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Bad+Script|Dancing+Script|Gloria+Hallelujah|Indie+Flower|Kaushan+Script|Mansalva|Nanum+Pen+Script|Pacifico|Permanent+Marker|Rock+Salt|Sacramento&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css"/>
     <link rel="stylesheet" type="text/css" href="circles.css">
@@ -17,26 +18,35 @@
             <header>
                 <h1>Beats</h1>
                 <p>Make music with only one tap</p>
+                <p class="para">Just tap the switches below or <br>press any key of your keyboard <br>and see the magic</p>
             </header>
             <div class="visual">
             </div>
             <div class="pads">
                 <div class="pad1">
+                    Tap!
                     <audio class="sound" src="./sounds/bubbles.mp3"></audio>
                 </div>
                 <div class="pad2">
+                    Tap!
                     <audio class="sound" src="./sounds/clay.mp3"></audio>
                 </div>
                 <div class="pad3">
+                    Tap!
                     <audio class="sound" src="./sounds/confetti.mp3"></audio>
                 </div>
                 <div class="pad4">
+                    Tap!
                     <audio class="sound" src="./sounds/glimmer.mp3"></audio>
                 </div>
-                <div class="pad5"></div>
+                <div class="pad5">
+                    Tap!
                     <audio class="sound" src="./sounds/moon.mp3"></audio>
-                <div class="pad6"></div>
+                </div>
+                <div class="pad6">
+                    Tap!
                     <audio class="sound" src="./sounds/ufo.mp3"></audio>
+                </div>
             </div>
         </div>
         <script type="text/paperscript" canvas="myCanvas">
