--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css"/>
     <link rel="stylesheet" type="text/css" href="circles.css">
-
+    <script src="https://kit.fontawesome.com/02269dc343.js" crossorigin="anonymous"></script>
 
     <div class="app">
             <header>
-                <h1>Beats</h1>
+                <h1><i class="fas fa-music"></i> Beats</h1>
                 <p>Make music with only one tap</p>
             </header>
             <div class="visual">
