More tiles added to the UI

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="./style.css"/>
     <link rel="stylesheet" type="text/css" href="circles.css">
 
-
     <div class="app">
             <header>
                 <h1>Beats</h1>
                 <p>Make music with only one tap</p>
                 <p class="para">Just tap the switches below or <br>press any key of your keyboard <br>and see the magic</p>
             </header>
+            <br><br><br><br><br><br><br><br>
             <div class="visual">
             </div>
             <div class="pads">
@@ -47,7 +47,61 @@
                     Tap!
                     <audio class="sound" src="./sounds/ufo.mp3"></audio>
                 </div>
+              </div>
+              <br>
+              <div class="pads">
+                <div class="pad7">
+                  Tap!
+                  <audio class="sound" src="./sounds/prism-1.mp3"></audio>
+                </div>
+                <div class="pad8">
+                  Tap!
+                  <audio class="sound" src="./sounds/prism-2.mp3"></audio>
+                </div>
+                <div class="pad9">
+                  Tap!
+                  <audio class="sound" src="./sounds/prism-3.mp3"></audio>
+                </div>
+                <div class="pad10">
+                  Tap!
+                  <audio class="sound" src="./sounds/piston-1.mp3"></audio>
+                </div>
+                <div class="pad11">
+                  Tap!
+                  <audio class="sound" src="./sounds/piston-2.mp3"></audio>
+                </div>
+                <div class="pad12">
+                 Tap!
+                 <audio class="sound" src="./sounds/piston-3.mp3"></audio>
+                </div>
             </div>
+            <br>
+            <div class="pads">
+              <div class="pad13">
+                Tap!
+                <audio class="sound" src="./sounds/splits.mp3"></audio>
+              </div>
+              <div class="pad14">
+                Tap!
+                <audio class="sound" src="./sounds/squiggle.mp3"></audio>
+              </div>
+              <div class="pad15">
+                Tap!
+                <audio class="sound" src="./sounds/strike.mp3"></audio>
+              </div>
+              <div class="pad16">
+                Tap!
+                <audio class="sound" src="./sounds/suspension.mp3"></audio>
+              </div>
+              <div class="pad17">
+                Tap!
+                <audio class="sound" src="./sounds/timer.mp3"></audio>
+              </div>
+              <div class="pad18">
+               Tap!
+               <audio class="sound" src="./sounds/zig-zag.mp3"></audio>
+              </div>
+          </div>
         </div>
         <script type="text/paperscript" canvas="myCanvas">
             var keyData = {
