modified background and changed the buttons

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css"/>
     <link rel="stylesheet" type="text/css" href="circles.css">
+    <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet"> 
 
     <div class="app">
             <header>
                 <h1>Beats</h1>
                 <p>Make music with only one tap</p>
-                <p class="para">Just tap the switches below or <br>press any key of your keyboard <br>and see the magic</p>
+                <p class="para">Just tap the switches below or press any key of your keyboard and see the magic</p>
             </header>
             <br><br><br><br><br><br><br><br>
             <div class="visual">
@@ -288,6 +289,10 @@
 
 <body>
     <canvas id="myCanvas" resize></canvas>
+    <br>
+    <br>
+    <br>
+    <br>
 </body>
 
 <script src="./index.js"></script>
